[package]
name = "miss-spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["socks"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
